# aoc-harness

./: .gitignore  Cargo.toml
aoc_harness/libs/macros/src/: lib.rs
aoc_harness/libs/macros_impl/src/: all.rs  lib.rs
aoc_harness/src/: answertype.rs  lib.rs
aoc_harness/tests/: 01-parse-input.rs
input/2021/: day24-decompiled.txt
libs/macros/: Cargo.toml
libs/macros/src/: lib.rs
libs/macros_impl/src/: latest.rs  lib.rs
src/: answers.rs  answertype.rs  lib.rs
tests/: 01-parse-input.rs
